# MMZC-Spanish-Script

./: CMakeLists.txt  MMZC Spanish Script.sln  MMZC Spanish Script.vcxproj  MMZC Spanish Script.vcxproj.filters  README.md  build.sh  dllmain.cpp  pch.h  prebuild.py
tpl/mmz1_tpl/: misc_text.tpl  msg00.tpl  msg01.tpl  msg02.tpl  msg03.tpl  msg04.tpl  msg05.tpl  msg06.tpl  msg07.tpl  msg08.tpl  msg09.tpl  msg0A.tpl  msg0B.tpl  msg0C.tpl  msg0D.tpl  msg0E.tpl  msg0F.tpl  msg10.tpl  msg11.tpl  msg12.tpl
tpl/mmz2_tpl/: misc_text.tpl  msg00.tpl  msg01.tpl  msg02.tpl  msg03.tpl  msg04.tpl  msg05.tpl  msg06.tpl  msg07.tpl  msg08.tpl  msg09.tpl  msg0A.tpl  msg0B.tpl  msg0C.tpl  msg0D.tpl  msg0E.tpl  msg0F.tpl  msg10.tpl  msg11.tpl  msg12.tpl  msg13.tpl
tpl/mmz3_tpl/: misc_text.tpl  msg00.tpl  msg01.tpl  msg02.tpl  msg03.tpl  msg04.tpl  msg05.tpl  msg06.tpl  msg07.tpl  msg08.tpl  msg09.tpl  msg0A.tpl  msg0B.tpl  msg0C.tpl  msg0D.tpl  msg0E.tpl  msg0F.tpl  msg10.tpl  msg11.tpl  msg12.tpl  msg13.tpl
tpl/mmz4_tpl/: misc_text.tpl  msg00.tpl  msg01.tpl  msg02.tpl  msg03.tpl  msg04.tpl  msg05.tpl  msg06.tpl  msg07.tpl  msg08.tpl  msg09.tpl  msg0A.tpl  msg0B.tpl  msg0C.tpl  msg0D.tpl  msg0E.tpl  msg0F.tpl  msg10.tpl  msg11.tpl  msg12.tpl  msg13.tpl  msg14.tpl  msg15.tpl
tpl/original_files/: gba_mmz1_tpl_single.tpl  gba_mmz2_tpl_single.tpl  gba_mmz3_tpl_single.tpl  gba_mmz4_tpl_single.tpl  lc_mmz1_tpl_single.tpl  lc_mmz2_tpl_single.tpl  lc_mmz3_tpl_single.tpl  lc_mmz4_tpl_single.tpl
tpl/plugins/: games.ini  mmz1-utf8.tbl  mmz1.ini  mmz2-utf8.tbl  mmz2.ini  mmz3-utf8.tbl  mmz3.ini  (+1 more)
(+230 files in other folders)
